# Rumble-LM

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  p0_contract.rs
crates/rag/: Cargo.toml
crates/rag/src/: corpus.rs  generate.rs  lib.rs  verify.rs
crates/rag/tests/: corpus_pgvector.rs
crates/server/: Cargo.toml
crates/server/src/: classification.rs  http.rs  integrity.rs  lib.rs  main.rs  ws.rs
crates/server/static/: app.js  index.html
crates/server/tests/: web_session.rs  ws_integration.rs
crates/ui/: Cargo.toml  README.md
crates/ui/src/: components.css  lib.rs  tokens.css
docs/: README.md
docs/adr/: 0001-product-architecture-and-boundaries.md  0002-mobile-first-webview-rust-core.md  0003-companion-repositories.md
docs/evolution/: 2026-06-28-evolution-and-hardening-spec.md
docs/goals/: 2026-06-28-session-spec-coverage.md
docs/specs/: 2026-06-27-presto-matic-design.md  2026-06-28-collaborative-spaces-authz-design.md  2026-06-28-frontend-dioxus-design-system-design.md  2026-06-28-signed-classification-clearance-design.md
docs/status/: 2026-06-29-session-handoff.md
