[package]
name = "presto-rag"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "presto_rag"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
presto-core.workspace = true
sqlx = { version = "0.9.0", default-features = false, features = ["postgres", "runtime-tokio", "tls-rustls"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
