[package]
name = "presto-server"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "presto-server"
path = "src/main.rs"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net", "macros"] }

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
